--- a/coverage-11.0.0/package.json
+++ b/coverage-11.0.0/package.json
@@ -15,7 +15,7 @@
   },
   "ava": {
     "require": [
-      "babel-register"
+      "babel-core/register"
     ]
   },
   "nyc": {
@@ -30,7 +30,6 @@
     "babel-core": "^6.9.1",
     "babel-plugin-__coverage__": "^11.0.0",
     "babel-preset-es2015": "^6.9.0",
-    "babel-register": "^6.9.0",
     "nyc": "^6.6.1"
   }
 }
